# msp430_template

./: CMakeLists.txt  MSP430.cmake  Readme.md  mspdebug.sh
src/: blink.c
